--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "node app.js"
   },
-  "author": "",
+  "author": "Ravikant Pal",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.0",
